--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                      SecureToken : "f8695b2c-0f33-449e-b7df-eafddf815698", 
                     To: Email, 
                     From: "vaishalisinghbh@gmail.com", 
-                    Subject: "History of the Commands "
+                    Subject: "History of the Commands ",
                     Body: data, 
                  }).then(function (message) { 
                          alert("mail sent successfully") 
